Add VOXL section

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,5 @@
-\chapter{Things}
-\section{Future things}
-\subsection{Proof of thingness}
-
-\section{Conclusions}
+\chapter{Conclusion and Future Work}
+\section{Conclusion}
 Tell me
+\section{Future Work}
+
