Add new figures

--- a/background.tex
+++ b/background.tex
@@ -47,6 +47,7 @@ Finally, cloudlets help mitigate cloud outages by serving as a fallback service
 \cite{satya2017}.
 
 \section{SteelEagle}
+\label{sec:steeleagle-bg}
 
 Autonomous drones perform tasks such as navigating between waypoints and
 tracking moving objects without the need for a human pilot.  However,
@@ -59,9 +60,9 @@ benefit the most from their abilities. Search and rescue operations, as well as
 wildlife conservation efforts that involve monitoring wildlife populations,
 will benefit immensely from the abilities of drones to cover large areas
 quickly. The potential for good increases exponentially with a swarm of drones
-working cooperatively. In rural areas with limited law enforcement resources,
-for instance, a swarm of drones could quickly scan large swathes of land
-looking for an abducted child.
+working cooperatively \cite{scherer2015}. In rural areas with limited law
+enforcement resources, for instance, a swarm of drones could quickly scan
+large swathes of land looking for an abducted child.
 
 Over time, autonomous drones will
 become cheaper and lighter as new ASIC designs are developed that are more
