--- a/drones.tex
+++ b/drones.tex
@@ -40,7 +40,13 @@ makes quadcopter drones well-suited for both indoor and outdoor use.  Since the
 2010s, drones have evolved significantly, with a range of consumer photography
 and racing drones easily available to consumers, at a wide range of price
 points. Drones are commonly used for filming and recreation, and have also seen
-use in logistics, to deliver packages. The scale of their adoption is
+use in logistics, to deliver packages.
+
+They have also been put to use in search and rescue
+\cite{scherer2015}\cite{tomic2012}, wildlife conservation \cite{gemert2015} and
+emergency
+
+The scale of their adoption is
 immense---The Federal Aviation Administration (FAA) has received registrations
 for almost 800,000 drones \cite{faa_drones_2024}.  This figure excludes
 thousands of hobbyist drones weighing under 250 g that do not require FAA
