--- a/register.bib
+++ b/register.bib
@@ -384,3 +384,91 @@ booktitle = {Proceedings of the 22 Nd International Conference on Distributed Co
 pages = {217},
 series = {ICDCS '02}
 }
+
+@inproceedings{hu2015,
+author = {Hu, Wenlu and Amos, Brandon and Chen, Zhuo and Ha, Kiryong and Richter, Wolfgang and Pillai, Padmanabhan and Gilbert, Benjamin and Harkes, Jan and Satyanarayanan, Mahadev},
+title = {The Case for Offload Shaping},
+year = {2015},
+isbn = {9781450333917},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2699343.2699351},
+doi = {10.1145/2699343.2699351},
+abstract = {When offloading computation from a mobile device, we show that it can pay to perform additional on-device work in order to reduce the offloading workload. We call this offload shaping, and demonstrate its application at many different levels of abstraction using a variety of techniques. We show that offload shaping can produce significant reduction in resource demand, with little loss of application-level fidelity.},
+booktitle = {Proceedings of the 16th International Workshop on Mobile Computing Systems and Applications},
+pages = {51–56},
+numpages = {6},
+keywords = {wireless networks, wifi, wearable computing, mobile computing, google glass, energy-efficient computing, early discard, cyber foraging, cloudlet, cloud offload, cloud computing},
+location = {Santa Fe, New Mexico, USA},
+series = {HotMobile '15}
+}
+
+@inproceedings{scherer2015,
+author = {Scherer, J\"{u}rgen and Yahyanejad, Saeed and Hayat, Samira and Yanmaz, Evsen and Andre, Torsten and Khan, Asif and Vukadinovic, Vladimir and Bettstetter, Christian and Hellwagner, Hermann and Rinner, Bernhard},
+title = {An Autonomous Multi-UAV System for Search and Rescue},
+year = {2015},
+isbn = {9781450335010},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2750675.2750683},
+doi = {10.1145/2750675.2750683},
+abstract = {This paper proposes and evaluates a modular architecture of an autonomous unmanned aerial vehicle (UAV) system for search and rescue missions. Multiple multicopters are coordinated using a distributed control system. The system is implemented in the Robot Operating System (ROS) and is capable of providing a real-time video stream from a UAV to one or more base stations using a wireless communications infrastructure. The system supports a heterogeneous set of UAVs and camera sensors. If necessary, an operator can interfere and reduce the autonomy. The system has been tested in an outdoor mission serving as a proof of concept. Some insights from these tests are described in the paper.},
+booktitle = {Proceedings of the First Workshop on Micro Aerial Vehicle Networks, Systems, and Applications for Civilian Use},
+pages = {33–38},
+numpages = {6},
+keywords = {video streaming, unmanned aerial vehicles, uav, system architecture, search and rescue, aerial communication},
+location = {Florence, Italy},
+series = {DroNet '15}
+}
+
+@ARTICLE{tomic2012,
+  author={Tomic, Teodor and Schmid, Korbinian and Lutz, Philipp and Domel, Andreas and Kassecker, Michael and Mair, Elmar and Grixa, Iris Lynne and Ruess, Felix and Suppa, Michael and Burschka, Darius},
+  journal={IEEE Robotics \& Automation Magazine},
+  title={Toward a Fully Autonomous UAV: Research Platform for Indoor and Outdoor Urban Search and Rescue},
+  year={2012},
+  volume={19},
+  number={3},
+  pages={46-56},
+  keywords={Unmanned aerial vehicles;Measurement by laser beam;Remotely operated vehicles;Cameras;Position measurement;Robots;Urban areas;Emergency services;Aircraft navigation},
+  doi={10.1109/MRA.2012.2206473}}
+
+@InProceedings{gemert2015,
+author="van Gemert, Jan C.
+and Verschoor, Camiel R.
+and Mettes, Pascal
+and Epema, Kitso
+and Koh, Lian Pin
+and Wich, Serge",
+editor="Agapito, Lourdes
+and Bronstein, Michael M.
+and Rother, Carsten",
+title="Nature Conservation Drones for Automatic Localization and Counting of Animals",
+booktitle="Computer Vision - ECCV 2014 Workshops",
+year="2015",
+publisher="Springer International Publishing",
+address="Cham",
+pages="255--270",
+abstract="This paper is concerned with nature conservation by automatically monitoring animal distribution and animal abundance. Typically, such conservation tasks are performed manually on foot or after an aerial recording from a manned aircraft. Such manual approaches are expensive, slow and labor intensive. In this paper, we investigate the combination of small unmanned aerial vehicles (UAVs or ``drones'') with automatic object recognition techniques as a viable solution to manual animal surveying. Since no controlled data is available, we record our own animal conservation dataset with a quadcopter drone. We evaluate two nature conservation tasks: (i) animal detection (ii) animal counting using three state-of-the-art generic object recognition methods that are particularly well-suited for on-board detection. Results show that object detection techniques for human-scale photographs do not directly translate to a drone perspective, but that light-weight automatic object detection techniques are promising for nature conservation tasks.",
+isbn="978-3-319-16178-5"
+}
+
+@misc{jacob2017,
+      title={Quantization and Training of Neural Networks for Efficient Integer-Arithmetic-Only Inference},
+      author={Benoit Jacob and Skirmantas Kligys and Bo Chen and Menglong Zhu and Matthew Tang and Andrew Howard and Hartwig Adam and Dmitry Kalenichenko},
+      year={2017},
+      eprint={1712.05877},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1712.05877},
+}
+
+@INPROCEEDINGS{ho2017,
+  author={Ho, Nhut-Minh and Wong, Weng-Fai},
+  booktitle={2017 IEEE High Performance Extreme Computing Conference (HPEC)},
+  title={Exploiting half precision arithmetic in Nvidia GPUs},
+  year={2017},
+  volume={},
+  number={},
+  pages={1-7},
+  keywords={Graphics processing units;Instruction sets;Arrays;Tools;Hardware;Registers},
+  doi={10.1109/HPEC.2017.8091072}}
